# vmr-http

./: .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
src/vmr_http/: __init__.py  app.py  dependencies.py
src/vmr_http/models/: bus.py  eq.py  strip.py
src/vmr_http/web/: __init__.py  bus.py  busmode.py  eq.py  strip.py  stripcomp.py  stripdenoiser.py  stripgate.py
src/vmr_http/web/bus/: __init__.py  bus.py  mode.py
src/vmr_http/web/command/: __init__.py  command.py
src/vmr_http/web/strip/: __init__.py  comp.py  denoiser.py  gainlayer.py  gate.py  strip.py
