[project]
name = "vmr-http"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "onyx-and-iris", email = "code@onyxandiris.online" }]
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.135.3", "voicemeeter-api>=2.7.2"]

[project.scripts]
vmr-http = "vmr_http:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["poethepoet>=0.43.0"]

[tool.fastapi]
entrypoint = "vmr_http.app:app"
